Fix overlapping elements in the header

--- a/src/app/stats-ribbon/stats-ribbon.component.css
+++ b/src/app/stats-ribbon/stats-ribbon.component.css
@@ -7,13 +7,13 @@
   margin-right: 1em;
 }
 
-@media (max-width: 1375px) and (min-width: 1000px), (max-width: 600px) {
+@media (max-width: 1450px) and (min-width: 1000px), (max-width: 600px) {
   .annotation-count {
     display: none;
   }
 }
 
-@media (max-width: 1240px) and (min-width: 1000px), (max-width: 380px) {
+@media (max-width: 1260px) and (min-width: 1000px), (max-width: 380px) {
   .publication-count {
     display: none;
   }
